--- a/uas/index.html
+++ b/uas/index.html
@@ -3,133 +3,158 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Halaman Login Modern</title>
+    <title>UAS PBO - Dark Mode Login</title>
     <style>
-        /* CSS - Desain & Tampilan */
-        * {
-            box-sizing: border-box;
-            margin: 0;
-            padding: 0;
-            font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+        /* Gaya Tampilan Dark Mode */
+        body { 
+            font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif; 
+            display: flex; 
+            justify-content: center; 
+            align-items: center; 
+            height: 100vh; 
+            background-color: #121212; /* Background Hitam */
+            margin: 0; 
+            color: #ffffff;
         }
 
-        body {
-            background: linear-gradient(135deg, #667eea 0%, #764ba2 100%);
-            display: flex;
-            justify-content: center;
-            align-items: center;
-            height: 100vh;
-        }
-
-        .login-container {
-            background: #fff;
-            padding: 2rem;
-            border-radius: 12px;
-            box-shadow: 0 10px 25px rgba(0,0,0,0.2);
-            width: 100%;
-            max-width: 400px;
-        }
-
-        h2 {
+        .card { 
+            background: #1e1e1e; /* Card Abu-abu Gelap */
+            padding: 2.5rem; 
+            border-radius: 12px; 
+            box-shadow: 0 10px 25px rgba(0,0,0,0.5); 
+            width: 320px; 
             text-align: center;
-            color: #333;
-            margin-bottom: 1.5rem;
         }
 
-        .input-group {
-            margin-bottom: 1rem;
-        }
+        h2 { margin-bottom: 1.5rem; color: #fff; }
 
-        .input-group label {
-            display: block;
-            margin-bottom: 5px;
-            color: #666;
-            font-size: 0.9rem;
-        }
-
-        .input-group input {
-            width: 100%;
-            padding: 12px;
-            border: 1px solid #ddd;
-            border-radius: 6px;
-            outline: none;
-            transition: border-color 0.3s;
-        }
-
-        .input-group input:focus {
-            border-color: #764ba2;
-        }
-
-        button {
-            width: 100%;
-            padding: 12px;
-            border: none;
-            border-radius: 6px;
-            background-color: #764ba2;
+        input { 
+            width: 100%; 
+            padding: 12px; 
+            margin: 10px 0; 
+            border: 1px solid #333; 
+            border-radius: 6px; 
+            box-sizing: border-box; 
+            background-color: #2c2c2c; 
             color: white;
-            font-size: 1rem;
+        }
+
+        /* Tombol Login Hijau */
+        #loginBtn { 
+            width: 100%; 
+            padding: 12px; 
+            background-color: #28a745; 
+            color: white; 
+            border: none; 
+            border-radius: 6px; 
+            cursor: pointer; 
             font-weight: bold;
-            cursor: pointer;
-            transition: background 0.3s;
+            font-size: 1rem;
+            transition: 0.3s;
         }
+        #loginBtn:hover { background-color: #218838; }
 
-        button:hover {
-            background-color: #5a3782;
+        /* Tombol Logout Merah */
+        #logoutBtn { 
+            width: 100%; 
+            padding: 12px; 
+            background-color: #dc3545; 
+            color: white; 
+            border: none; 
+            border-radius: 6px; 
+            cursor: pointer; 
+            font-weight: bold;
+            margin-top: 20px;
         }
+        #logoutBtn:hover { background-color: #c82333; }
 
-        #message {
-            margin-top: 1rem;
-            text-align: center;
-            font-size: 0.9rem;
-            min-height: 1.2rem;
-        }
-
-        .success { color: #28a745; }
-        .error { color: #dc3545; }
+        #message { margin-top: 15px; font-size: 0.9rem; min-height: 20px; }
+        .error { color: #ff4d4d; }
+        .hidden { display: none; }
+        
+        #user-info { color: #bbb; line-height: 1.5; }
     </style>
 </head>
 <body>
 
-    <div class="login-container">
-        <h2>Selamat Datang</h2>
-        <form id="loginForm">
-            <div class="input-group">
-                <label for="username">Username</label>
-                <input type="text" id="username" placeholder="Masukkan username" required>
-            </div>
-            <div class="input-group">
-                <label for="password">Password</label>
-                <input type="password" id="password" placeholder="Masukkan password" required>
-            </div>
-            <button type="submit">Masuk</button>
-        </form>
-        <p id="message"></p>
+    <div id="login-container" class="card">
+        <h2>Login System</h2>
+        <input type="text" id="username" placeholder="Username" autocomplete="off">
+        <input type="password" id="password" placeholder="Password">
+        <button id="loginBtn">LOG IN</button>
+        <div id="message"></div>
+    </div>
+
+    <div id="user-page" class="card hidden">
+        <h2 style="color: #28a745;">Access Granted</h2>
+        <p id="user-info"></p>
+        <button id="logoutBtn">LOGOUT</button>
     </div>
 
     <script>
-        // JavaScript - Logika Login
-        document.getElementById('loginForm').addEventListener('submit', function(e) {
-            e.preventDefault(); // Mencegah reload halaman
+        // --- LOGIKA OOP (CLASS) ---
+        class AuthSystem {
+            constructor() {
+                this.initDatabase();
+                this.currentUser = null;
+            }
 
-            const user = document.getElementById('username').value;
-            const pass = document.getElementById('password').value;
-            const message = document.getElementById('message');
+            // Menyimpan Data Set JSON di Local Storage
+            initDatabase() {
+                const initialUsers = [
+                    { "username": "admin", "password": "123" },
+                    { "username": "mahasiswa", "password": "pbo" }
+                ];
 
-            // Simulasi pengecekan (Username: admin, Password: password123)
-            if (user === "admin" && pass === "password123") {
-                message.textContent = "Login Berhasil! Mengalihkan...";
-                message.className = "success";
-                
-                // Simulasi pengalihan halaman setelah 1.5 detik
-                setTimeout(() => {
-                    alert("Anda berhasil masuk ke dashboard!");
-                }, 1500);
+                if (!localStorage.getItem('users')) {
+                    localStorage.setItem('users', JSON.stringify(initialUsers));
+                }
+            }
+
+            // Fungsi Login
+            authenticate(username, password) {
+                const users = JSON.parse(localStorage.getItem('users'));
+                const found = users.find(u => u.username === username && u.password === password);
+
+                if (found) {
+                    this.currentUser = found.username;
+                    return true;
+                }
+                return false;
+            }
+        }
+
+        // --- INISIALISASI & EVENT ---
+        const auth = new AuthSystem();
+
+        const loginBox = document.getElementById('login-container');
+        const userBox = document.getElementById('user-page');
+        const msg = document.getElementById('message');
+
+        document.getElementById('loginBtn').addEventListener('click', () => {
+            const u = document.getElementById('username').value;
+            const p = document.getElementById('password').value;
+
+            if (auth.authenticate(u, p)) {
+                // Berhasil Login
+                loginBox.classList.add('hidden');
+                userBox.classList.remove('hidden');
+                document.getElementById('user-info').innerHTML = `Selamat datang kembali, <b>${auth.currentUser}</b>!<br>Sesi Anda aktif sekarang.`;
+                msg.innerText = "";
             } else {
-                message.textContent = "Username atau Password salah.";
-                message.className = "error";
+                // Skenario Salah Login
+                msg.innerText = "salah login";
+                msg.className = "error";
             }
         });
-    </script>
 
+        document.getElementById('logoutBtn').addEventListener('click', () => {
+            userBox.classList.add('hidden');
+            loginBox.classList.remove('hidden');
+            document.getElementById('username').value = "";
+            document.getElementById('password').value = "";
+            msg.innerText = "";
+        });
+    </script>
 </body>
 </html>
